<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pablo.prueba2.MainActivity">

    <include layout="@layout/app_bar_layout1" android:id="@+id/main_page_toolbar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_page_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/this_is_main_page"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="56dp"
        android:numStars="5"
        android:rating="3.0"
        android:stepSize="1.0" />

    <TextView
        android:id="@+id/rate_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ratingBar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:text="@string/rate_us"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btnSubmitRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rate_us"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/rate_us"
        android:layout_marginBottom="16dp"
        android:text="@string/submit_rating" />

    <Button
        android:id="@+id/open_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rate_us"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="155dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/open_chat" />

</RelativeLayout>
